[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-service"
version = "0.1.0"
description = "Parser/decoder file worker service"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest-dependency"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
	"dependency: test dependency graph managed by pytest-dependency",
]
